--- a/components/page-header/page-header.less
+++ b/components/page-header/page-header.less
@@ -2,46 +2,55 @@
 
 .page-header {
 	display: flex;
-	position: fixed;
+	position: absolute;
 	top: 0;
 	right: 0;
 	left: 0;
 	flex-direction: column;
 	justify-content: flex-end;
 	height: 100vh;
+	overflow: hidden;
 	background-color: @black;
 	background-position: center;
 	background-size: cover;
 	text-align: center;
 
-	&.show-gradient::after {
-		content: '';
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		width: 100%;
-		height: 80%;
-		background: linear-gradient(0deg, fade(@black, 50%), fade(@black, 0%));
-	}
-
-	&.page-header-small {
-		height: 85vh;
-	}
-
-	@media @screen-500 {
-		&.page-header-small {
-			height: 60vh;
-		}
-	}
-
-	@media @screen-768 {
-		&::after {
+	&::after {
+		@media @screen-768 {
 			display: none;
 		}
+	}
+}
 
-		&.show-video::after {
-			display: block;
-		}
+.page-header--has-gradient::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 80%;
+	background: linear-gradient(0deg, fade(@black, 50%), fade(@black, 0%));
+}
+
+.page-header--show-video::after {
+	@media @screen-768 {
+		display: block;
+	}
+}
+
+.page-header--fixed {
+	position: fixed;
+}
+
+.page-header--hidden {
+	display: none;
+}
+
+.page-header--small {
+	height: 85vh;
+
+	@media @screen-500 {
+		height: 60vh;
 	}
 }
 
@@ -54,15 +63,14 @@
 	height: 100%;
 	margin-bottom: 0;
 
-	.page-header-small & {
+	.page-header--small & {
 		justify-content: center;
 	}
 }
 
 .page-header-video {
 	display: none;
-	position: fixed;
-	z-index: -1;
+	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100vw;
@@ -70,8 +78,9 @@
 	transition: opacity @animation-speed;
 	opacity: 0;
 	object-fit: cover;
+	pointer-events: none;
 
-	.show-video & {
+	.page-header--show-video & {
 		opacity: 1;
 	}
 
@@ -136,7 +145,7 @@
 		outline: none;
 	}
 
-	.page-header-small & {
+	.page-header--small & {
 		display: none;
 	}
 
